<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.netease.nmc.nertcsample.beauty.MeetingActivity"
    android:orientation="vertical">

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_effect_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/effect_btn_padding"
        android:valueFrom="0"
        android:valueTo="100"
        android:stepSize="1"
        android:theme="@style/SliderTheme"
        app:trackHeight="@dimen/slider_trackheight"
        app:thumbRadius="@dimen/slider_thumbradius"
        app:tickVisible="false"
        app:thumbColor="@color/colorAccent"
        app:trackColorActive="@color/colorAccent"
        app:trackColorInactive="@color/colorPrimary"/>

    <HorizontalScrollView
        android:id="@+id/horizontal_scrollv_beauty"
        android:background="@android:color/transparent"
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.netease.nmc.nertcsample.beauty.ui.NEBeautyRadioGroup
            android:id="@+id/radio_group_effect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_effect_recover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_recover"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_recover"/>
            <RadioButton
                android:id="@+id/rb_effect_whiteteeth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_whitenteeth"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_whiteteeth"/>
            <RadioButton
                android:id="@+id/rb_effect_lighteye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_eyebright"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_lighteye"/>
            <RadioButton
                android:id="@+id/rb_effect_whiten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_whiten"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_whiten"/>
            <RadioButton
                android:id="@+id/rb_effect_smooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_smooth"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_smooth"/>
            <RadioButton
                android:id="@+id/rb_effect_smallnose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_thinnose"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_smallnose"/>
            <RadioButton
                android:id="@+id/rb_effect_eyedis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_eyedis"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_eyedis"/>
            <RadioButton
                android:id="@+id/rb_effect_eyeangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_eyeangle"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_eyeangle"/>
            <RadioButton
                android:id="@+id/rb_effect_mouth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_mouth"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_mouth"/>
            <RadioButton
                android:id="@+id/rb_effect_bigeye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_enlarge_eye"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_bigeye"/>
            <RadioButton
                android:id="@+id/rb_effect_smallface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_shrinkface"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_smallface"/>
            <RadioButton
                android:id="@+id/rb_effect_jaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_shrinkjaw"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_jaw"/>
            <RadioButton
                android:id="@+id/rb_effect_thinface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_thinface"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_thinface"/>
            <RadioButton
                android:id="@+id/rb_effect_faceruddy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_smooth"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_faceruddy"/>
            <RadioButton
                android:id="@+id/rb_effect_longnose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_thinnose"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_longnose"/>
            <RadioButton
                android:id="@+id/rb_effect_philtrum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_thinnose"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_philtrum"/>
            <RadioButton
                android:id="@+id/rb_effect_mouthangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_mouth"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_mouthangle"/>
            <RadioButton
                android:id="@+id/rb_effect_roundeye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_eyeangle"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_roundeye"/>
            <RadioButton
                android:id="@+id/rb_effect_eyecorner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_eyeangle"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_eyecorner"/>
            <RadioButton
                android:id="@+id/rb_effect_vface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_thinface"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_vface"/>
            <RadioButton
                android:id="@+id/rb_effect_underjaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_shrinkjaw"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_underjaw"/>
            <RadioButton
                android:id="@+id/rb_effect_narrowface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_shrinkface"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_narrowface"/>
            <RadioButton
                android:id="@+id/rb_effect_cheekbone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_shrinkface"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_cheekbone"/>
            <RadioButton
                android:id="@+id/rb_effect_facesharpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableTop="@drawable/ic_effect_thinface"
                android:gravity="center"
                android:paddingLeft="@dimen/effect_btn_padding"
                android:paddingRight="@dimen/effect_btn_padding"
                android:textColor="@color/white"
                android:text="@string/effect_facesharpen"/>
        </com.netease.nmc.nertcsample.beauty.ui.NEBeautyRadioGroup>
    </HorizontalScrollView>
</LinearLayout>
